--- a/DDD.Data.EF/DDD.Data.EF.csproj
+++ b/DDD.Data.EF/DDD.Data.EF.csproj
@@ -11,4 +11,18 @@
       <ProjectReference Include="..\DDD.Domain.Entities\DDD.Domain.Entities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Goods" />
+      <Folder Include="Orders" />
+      <Folder Include="Salesmen" />
+    </ItemGroup>
+
 </Project>
