--- a/DDD.Domain.ApplicationServices/DDD.Domain.ApplicationServices.csproj
+++ b/DDD.Domain.ApplicationServices/DDD.Domain.ApplicationServices.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\DDD.Domain.Services\DDD.Domain.Services.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Customers\Command" />
+    </ItemGroup>
+
 </Project>
