--- a/DDD.Domain.Contracts/DDD.Domain.Contracts.csproj
+++ b/DDD.Domain.Contracts/DDD.Domain.Contracts.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\DDD.Domain.Entities\DDD.Domain.Entities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common" />
+    </ItemGroup>
+
 </Project>
