--- a/DDD.Domain.ApplicationServices/DDD.Domain.ApplicationServices.csproj
+++ b/DDD.Domain.ApplicationServices/DDD.Domain.ApplicationServices.csproj
@@ -14,6 +14,9 @@
 
     <ItemGroup>
       <Folder Include="Customers\Command" />
+      <Folder Include="Goods\Command" />
+      <Folder Include="Orders\Command" />
+      <Folder Include="Salesmen\Command" />
     </ItemGroup>
 
 </Project>
